--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Cole", email = "cmmeyer@arizona.edu" }
 ]
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "sphinx>=8.1.3",
+]
 
 [project.scripts]
 shinalysis = "shinalysis:main"
@@ -15,3 +17,8 @@ shinalysis = "shinalysis:main"
 [build-system]
 requires = ["uv_build>=0.8.17,<0.9.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "sphinx-rtd-theme>=3.0.2",
+]
